<resources>
    <string name="app_name">Pokemon Go Notifier</string>
    <string name="action_settings">Settings</string>
    <string name="pokemon_go_status">Pokemon Go Status</string>
    <string name="online_text">Online</string>
    <string name="settingMainText">The widget will update itself on tap/press by default.</string>
    <string name="settingSwitchText">Update Widget Every Minute</string>
    <string name="settingSwitchNoteText">*If this is switched on, the widget will update itself every minute. This however, will increase battery consumption.</string>

    <string name="about">About</string>
    <string name="aboutNote">This was made by: </string>
    <string name="scub3d">Spenser Solys</string>
    <string name="chinchalupa">Jeremy Wright</string>
    <string name="healbadbad">Nathan Blank</string>

    <string name="websiteNote">We are using this website to get the server status: cmmcd.com/PokemonGo/</string>
    <string name="donateText">If you would like to donate to keep his server up: paypal.me/cmmcd</string>

</resources>
