<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout android:layout_height="wrap_content"
        android:layout_width="match_parent" android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
            android:layout_width="match_parent" android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_main" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/action_settings"
            android:id="@+id/textView"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="85dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textSize="26dp" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settingSwitchText"
            android:id="@+id/switch1"
            android:layout_marginTop="31dp"
            android:textSize="22dp"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/settingSwitchNoteText"
            android:id="@+id/textView2"
            android:nestedScrollingEnabled="false"
            android:layout_below="@+id/switch1"
            android:paddingTop="5dp"
            android:layout_alignLeft="@+id/switch1"
            android:layout_alignStart="@+id/switch1"
            android:layout_alignRight="@+id/switch1"
            android:layout_alignEnd="@+id/switch1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/about"
            android:id="@+id/textView3"
            android:layout_gravity="center_vertical"
            android:textSize="26dp"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:paddingTop="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/aboutNote"
            android:id="@+id/textView4"
            android:paddingTop="5dp"
            android:textSize="18dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/scub3d"
            android:id="@+id/textView5"
            android:paddingTop="7dp"
            android:layout_below="@+id/textView4"
            android:layout_alignRight="@+id/textView"
            android:layout_alignEnd="@+id/textView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/chinchalupa"
            android:id="@+id/textView6"
            android:layout_below="@+id/textView5"
            android:layout_alignRight="@+id/textView"
            android:layout_alignEnd="@+id/textView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/healbadbad"
            android:id="@+id/textView7"
            android:layout_below="@+id/textView6"
            android:layout_alignRight="@+id/textView6"
            android:layout_alignEnd="@+id/textView6" />

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
